# pvr.xtreamcodes

./: CMakeLists.txt  DVRimplementation.json  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.json  README.md
.github/workflows/: release.yml
pvr.dispatcharr/: addon.xml.in
pvr.dispatcharr/resources/language/resource.language.en_gb/: strings.po
pvr.xtreamcodes/: addon.xml.in
pvr.xtreamcodes/resources/: settings.xml
pvr.xtreamcodes/resources/language/resource.language.en_gb/: strings.po
src/: addon.cpp  dispatcharr_client.cpp  dispatcharr_client.h  xtream_client.cpp  xtream_client.h
